# Time_track_app

./: .env.example  .gitignore  CHANGELOG_WINDOWS.md  CHANGES.md  CHECKLIST.md  CREATE_ENTRY.sh  CREATE_PR_INSTRUCTIONS.md  DEMO_SETUP.md  DEMO_VS_PRODUCTION.md  FIXED_404_SUMMARY.md  FIX_404.bat  FOR_WINDOWS_USERS.txt  FULL_DEMO.sh  Fix-404.ps1  Install-All.ps1  Install-Backend.ps1  Install-Frontend.ps1  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  QUICKSTART.txt  QUICKSTART_WINDOWS.txt  README.md  README_WINDOWS.txt  REMOTE_ACCESS.md  ROADMAP_EXPLANATION.md  RUNNING.md  SCRIPTS_README.md  STATUS.txt  SUMMARY.txt  Start-Backend.ps1  Start-Frontend.ps1  Start-Windows.ps1  Stop-Windows.ps1  TEST_API.sh  TROUBLESHOOTING.md  WINDOWS_CHANGES.md  WINDOWS_CHEATSHEET.txt  WINDOWS_FILES_SUMMARY.txt  WINDOWS_NATIVE_SETUP_SUMMARY.md  WINDOWS_QUICKSTART.bat  (+16 more)
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py  main.py  models.py
backend/tests/: test_health.py
docs/architecture/: README.md  ci-plan.md  data-model.md  infrastructure.md  risk-register.md  stack-decisions.md  system-architecture.md
docs/environment/: README.md  mock-run.md
docs/requirements/: README.md  system-requirements.md
docs/roadmap/: README.md  phase-02-foundation.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  main.test.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CreateTimeEntryForm.tsx  Dashboard.tsx  TimeEntryList.tsx
frontend/src/store/: index.ts  projectsSlice.ts  statsSlice.ts  (+1 more)
