[project]
name = "time-track-backend"
version = "0.1.0"
description = "Backend API for Time Track App"
requires-python = ">=3.12"
authors = [{ name = "Time Track Team", email = "team@timetrack.dev" }]
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.3",
  "black>=24.4",
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "httpx>=0.27"
]

[tool.uv]
managed = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I", "UP", "RUF"]
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["app"]
asyncio_mode = "auto"
addopts = "-q"
